# 10-herencia-polim-salario-herencia-1

./: CMakeLists.txt  DesarrolladorJunior.cpp  DesarrolladorJunior.h  DesarrolladorSenior.cpp  DesarrolladorSenior.h  Empleado.cpp  Main.cpp
